# statworx-python-ds-template

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  copier.yml  install_copier.sh  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: code_tools.md  contribution.md  dev_tools.md  ide_integration.md  initialisation_guide.md  kedro.md  precommit_hooks.md  project_settings.md  requirements.txt  style_guide.md  testing.md  tool_overview.md
docs/assets/css/: extras.css  shortcut.css
docs/assets/javascripts/: shortcuts.js
project/: .cz.toml.j2  .env  .gitignore  .pre-commit-config.yaml  Makefile.j2  docker-compose.yml.j2  mkdocs.yml.j2  pyproject.toml.j2  setup.cfg  {% if documentation == 'mkdocs' %}mkdocs.yml{% endif %}.j2  {% if orchestrator == 'hydra' %}README.md{% endif %}.j2  {% if orchestrator == 'kedro' %}README.md{% endif %}.j2  {% if orchestrator == 'none' %}README.md{% endif %}.j2  {% if use_docker %}.dockerignore{% endif %}  {% if use_docker %}Dockerfile{% endif %}.j2
project/.github/workflows/: conde_quality.yml  docspublish.yaml  release.yml
project/conf/base/: logging.yml  mlflow.yml.j2
project/notebooks/: Example Plotting.ipynb  {% if orchestrator == 'kedro' %}Example Kedro.ipynb{% endif %}
project/reports/: README.md
project/scripts/: install_dependencies.sh.j2  post_generation.sh.j2  validate_inputs.py.j2
project/{% if documentation == 'sphinx' %}docs{% endif %}/: conf.py  index.rst
tests/: test_generate.sh  test_generate_hydra.sh  test_generate_kedro.sh
(+38 files in other folders)
