[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "statworx_cookicutter_template"
version = "0.1.0"
description = ""
authors = ["An Hoang <an.hoang@statworx.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
copier = "^5.1.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
